Bug 1384560 - Annotate crash reports with accessibility client information. r=aklotz

MozReview-Commit-ID: LhxqeR6NFR6